[tool.poetry]
name = "youtube_playlist_crud"
version = "0.1.0"
description = ""
authors = ["JChenJChen <jasonjasonjasonc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
google_auth_oauthlib = "^0.4.1"
google-api-python-client = "^1.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
